<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="bottom_bar_title_categories">Kategorie</string>
    <string name="bottom_bar_title_questions">Pytania</string>

    <string name="ic_desc_answers">Odpowiedzi</string>
    <string name="ic_desc_validation_ok">Status walidacji</string>

    <string name="content_desc_category_color">Kolor kategorii</string>
    <string name="content_desc_category_status_color">Kolor statusu kategorii</string>

    <string name="label_category_details">Kategoria</string>
    <string name="label_category_title">Tytuł</string>
    <string name="label_category_desc">Opis</string>
    <string name="label_category_status">Status</string>
    <string name="label_category_color">Kolor</string>
    <string name="label_category_color_preview">KOLOR</string>
    <string name="label_category_questions_section">Pytania w tej kategorii</string>
    <string name="label_category_questions_amount_singular">pytanie</string>
    <string name="label_category_questions_amount_few">pytania</string>
    <string name="label_category_questions_amount_many">pytań</string>
    <string name="label_answers_count_one">odpowiedź</string>
    <string name="label_answers_count_many">odpowiedzi</string>

    <string name="hint_category_title">Nazwa kategorii</string>
    <string name="hint_category_desc">Opis…</string>

    <string name="button_change_color">Zmień kolor</string>
    <string name="button_change_status">Zmień status</string>
    <string name="button_add_new_question" tools:ignore="Typos">Nowe pytanie</string>
    <string name="button_add_question_from_database">Dodaj z bazy</string>

    <string name="alert_unsaved_changes_title">Uwaga</string>
    <string name="alert_unsaved_changes_message">Zmiany zostaną utracone!</string>
    <string name="alert_unsaved_changes_negative_button">Wróć</string>
    <string name="alert_unsaved_changes_positive_button">OK</string>

    <string name="status_draft">SZKIC</string>
    <string name="status_in_progress">W TRAKCIE</string>
    <string name="status_done">GOTOWE</string>
    <string name="status_approved">ZATWIERDZONE</string>
    <string name="status_need_rework">WYMAGA ZMIAN</string>"
    <string name="label_question">Pytanie</string>
    <string name="hint_question_text">Tekst pytania</string>
    <string name="label_answers">odpowiedzi</string>
    <string name="label_correct_answers">poprawnych</string>
    <string name="hint_answer">Dodaj odpowiedź</string>
    <string name="label_correct_answer">Poprawna</string>
    <string name="label_incorrect_answer">Błędna</string>
    <string name="label_no_categories">Brak kategorii</string>
    <string name="ic_desc_category_color">Kolor kategorii</string>

    <string name="question_validation_ok">OK</string>
    <string name="question_validation_missing_answers">Brak odpowiedzi</string>
    <string name="question_validation_no_correct_answer">Brak poprawnej odpowiedzi</string>


    <string name="sort_title_order">Kolejność</string>
    <string name="sort_ascending">Rosnąco</string>
    <string name="sort_descending">Malejąco</string>
    <string name="sort_by_date">Najnowsze</string>
    <string name="sort_by_title">Alfabetycznie</string>
    <string name="sort_by_questions_amount">Ilość Pytań</string>
    <string name="sort_by_answers_amount">Ilość Odpowiedzi</string>

    <string name="filter_none">Brak</string>
    <string name="filter_by_having_questions">Z Pytaniami</string>
    <string name="filter_by_no_questions">Bez Pytań</string>
    <string name="filter_by_status">Status</string>
    <string name="filter_by_migrated">Na produkcji</string>
    <string name="filter_by_having_categories">Z Kategoriami</string>
    <string name="filter_by_no_categories">Bez Kategorii</string>
    <string name="filter_by_having_answers">Z Odpowiedziami</string>
    <string name="filter_by_no_answers">Bez Odpowiedzi</string>
    <string name="filter_by_correct_answers">Z Poprawnymi Odpowiedziami</string>
    <string name="filter_by_no_correct_answers">Bez Poprawnych Odpowiedzi</string>

    <string name="warning_empty_category_text">Tytuł kategorii nie może być pusty!</string>
    <string name="warning_empty_question_text">Tekst pytania nie może być pusty!</string>
    <string name="warning_empty_answer_text">Tekst odpowiedzi nie może być pusty!</string>

    <string name="title_picker_categories">Dodaj lub usuń kategorie</string>
    <string name="title_picker_questions">Dodaj lub usuń pytania</string>
    <string name="picker_no_categories">Żadna kategoria nie została jeszcze dodana. Wróć do listy wszystkich kategorii i dodaj pierwszą!</string>
    <string name="picker_no_questions">Żadne pytanie nie zostało jeszcze dodane. Wróć do listy wszystkich pytań i dodaj pierwsze!</string>
    <string name="btn_category_questions">Pytania</string>
</resources>