<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_tile"
    android:paddingTop="10dp"
    android:paddingHorizontal="10dp">

    <EditText
        android:id="@+id/category_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@color/transparent"
        android:hint="@string/hint_category_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/group_details_edition_fields"
        app:layout_goneMarginBottom="10dp"
        tools:ignore="TextFields" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_name_field" />


    <EditText
        android:id="@+id/category_description_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@color/transparent"
        android:hint="@string/hint_category_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        tools:ignore="TextFields" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_description_field" />

    <TextView
        android:id="@+id/label_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/label_category_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.5" />

<!--    <ImageView-->
<!--        android:id="@+id/color_preview"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        android:background="@drawable/shape_rounded_color_indicator"-->
<!--        android:contentDescription="@string/content_desc_category_status_color"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/label_color"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/label_color" />-->

    <com.rafalskrzypczyk.core.custom_views.ColorOutlinedLabelView
        android:id="@+id/color_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/label_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_color" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_color" />

    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/label_category_status"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <com.rafalskrzypczyk.core.custom_views.ColorOutlinedLabelView
        android:id="@+id/indicator_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/label_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_status" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_status" />

    <TextView
        android:id="@+id/label_is_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Kategoria bezpłatna"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_is_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:thumbTint="@color/selector_correct_switch_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_is_free"
        app:layout_constraintBottom_toBottomOf="@id/label_is_free"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_is_free" />

    <Button
        android:id="@+id/button_change_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_change_color"
        app:layout_constraintEnd_toStartOf="@+id/divider_buttons"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider5" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_buttons"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_change_color"
        app:layout_constraintEnd_toStartOf="@+id/button_change_status"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_change_color"
        app:layout_constraintTop_toTopOf="@+id/button_change_color" />

    <Button
        android:id="@+id/button_change_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_change_status"
        app:layout_constraintBottom_toBottomOf="@+id/button_change_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divider_buttons"
        app:layout_constraintTop_toTopOf="@+id/button_change_color" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_details_edition_fields"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/category_name_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:constraint_referenced_ids="category_description_field, label_color, label_status,
        color_preview, indicator_status, button_change_color, button_change_status,
        label_is_free, switch_is_free, divider1, divider2, divider3, divider4, divider5,
        divider_buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>